apex charts animation changed

--- a/themes/default/health/index.html
+++ b/themes/default/health/index.html
@@ -123,6 +123,19 @@
             height: 500,
             type: 'bar',
             stacked: true,
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         plotOptions: {
             bar: {
@@ -183,6 +196,19 @@
         chart: {
             width: 600,
             type: 'pie',
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         title: {
             text: 'Overall percentage'
