--- a/themes/default/sport/index.html
+++ b/themes/default/sport/index.html
@@ -135,6 +135,19 @@
         chart: {
             height: 500,
             type: 'bar',
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         plotOptions: {
             bar: {
@@ -159,6 +172,19 @@
         chart: {
             width: 600,
             type: 'pie',
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         title: {
             text: 'Percentage'
