--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -122,6 +122,19 @@
         chart: {
             height: 500,
             type: 'bar',
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         plotOptions: {
             bar: {
@@ -146,6 +159,19 @@
         chart: {
             width: 550,
             type: 'pie',
+            animations: {
+                enabled: true,
+                easing: 'easeinout',
+                speed: 1500,
+                animateGradually: {
+                    enabled: true,
+                    delay: 150
+                },
+                dynamicAnimation: {
+                    enabled: true,
+                    speed: 350
+                }
+            }
         },
         title: {
             text: 'Overall Percentage'
